navbar - fixed avatar overflowing size

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -3775,6 +3775,10 @@ background: var(--variant-hover-bg);
 color: var(--variant-hover);
 }
 
+.kroma-navbar .kroma-avatar {
+  max-width: calc(var(--nav-size-base) / 1.5);
+  max-height: calc(var(--nav-size-base) / 1.5);
+}
 
 
 /* --- pagination.css --- */
