--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -188,3 +188,8 @@ background: var(--variant-hover-bg);
 color: var(--variant-hover);
 }
 
+.kroma-navbar .kroma-avatar {
+    max-width: calc(var(--nav-size-base) / 1.5);
+    max-height: calc(var(--nav-size-base) / 1.5);
+}
+
